# grimfang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  grimfang.md
.github/workflows/: ci.yml
src/: attacks.cpp  attacks.hpp  bitboard.cpp  bitboard.hpp  datagen.cpp  datagen.hpp  eval.cpp  eval.hpp  history.hpp  killers.hpp  main.cpp  move.hpp  movegen.cpp  movegen.hpp  nnue.cpp  nnue.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  score.hpp  search.cpp  search.hpp  sync.hpp  timeman.cpp  timeman.hpp  tt.cpp  tt.hpp  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
tests/: CMakeLists.txt  datagen_tests.cpp  eval_tests.cpp  history_tests.cpp  killers_tests.cpp  lmr_tests.cpp  nnue_tests.cpp  nullmove_tests.cpp  perft_suite.epd  perft_tests.cpp  search_tests.cpp  tt_tests.cpp  uci_tests.cpp
tools/: .gitignore  README.md  bench_check.ps1  datagen.ps1  datagen_monitor.ps1  datagen_stress.ps1  embed_binary.ps1  reliability_check.ps1  sprt.ps1  sprt.sh
tools/books/: .gitkeep
tools/convert/: Cargo.toml
tools/convert/src/: datagen.rs  lib.rs  main.rs  mapper.rs
tools/convert/tests/: integration.rs
tools/training/: README.md  grimfang_net001.rs  grimfang_net002.rs  grimfang_net003.rs  run_full.ps1  run_smoke.ps1  setup.ps1  shuffle_data.ps1  stockwolf_net001.rs
tools/training/verify/: Cargo.toml
tools/training/verify/src/: main.rs
