[package]
name = "convert"
version = "0.1.0"
edition = "2021"
description = "Convert Grimfang datagen shards to bullet ChessBoard training data"

[lib]
name = "convert"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bulletformat = "=1.8.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
